Add :e option to Vim cribsheet for opening files

--- a/workbook/workbook.tex
+++ b/workbook/workbook.tex
@@ -751,6 +751,7 @@ tc@box:~$ python src/hello.py
 \item[:q!$<$ENTER$>$] - (q)uit and discard any changes
 \item[:w$<$ENTER$>$] - (w)rite changes to file
 \item[:wq$<$ENTER$>$] - (w)rite changes to file then (q)uit
+\item[:e \emph{filename} $<$ENTER$>$] - Open file \emph{filename} in Vim for editing
 \item[dd$<$ENTER$>$] - Delete the entire line that the cursor is on
 \item[x$<$ENTER$>$] - Delete the character that the cursor is on
 \item[j] - Move the cursor up one line (NB. You can also use the `up' arrow key
