Use vertabim comments to hide additional chapters instead of %'ing them

--- a/workbook/workbook.tex
+++ b/workbook/workbook.tex
@@ -1296,7 +1296,7 @@ if __name__ == "__main__":
 % CHAPTER 05
 %%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%
-\begin{comment}
+%\begin{comment}
 \chapter{HTML Templates using Jinja2}
 \label{lab05}
 \paragraph{} Storing and writing our HTML code in Python as we have done in previous chapters is not a lot of fun. It is finicky and error-prone and doesn't give us much scope for doing interesting things like generating HTML pages on the fly. Luckily there is a solution for that. Using \emph{templates} we can describe the basic layout of a page and sign-post those elements that Python can fill in with actual data. Python uses an external templating engine, called Jinja2\footnote{\url{http://jinja.pocoo.org/2/}} which is already installed in Levinux alongside Python and Python-Flask.
@@ -1304,17 +1304,18 @@ if __name__ == "__main__":
 \paragraph{} Jinja2 is a fully-fledged Python templating engine and is not dependent upon Flask. So if you were writing another app at some point in your career that outputs HTML pages then Jinja2 is a good option. For the moment though we shall use it exclusively with Flask.
 
 \paragraph{} The process is simple. We supply HTML templates, in a template folder, then, in our functions we tell Flask which template to render and return to the client using the render\_template function.
-\end{comment}
+%\end{comment}
 
 %%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%
 % CHAPTER 06
 %%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%
-
-%\chapter{Flask: Sessions, Message Flashing, Logging, Testing}
-%\label{lab06}
-%\paragraph{} 
+\begin{comment}
+\chapter{Flask: Sessions, Message Flashing, Logging, Testing}
+\label{lab06}
+\paragraph{} 
+\end{comment}
 
 
 %%%%%%%%%%%%%%%%%
@@ -1323,9 +1324,11 @@ if __name__ == "__main__":
 %%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%
 
-%\chapter{Adding Style: Bootstrap (CSS+JS)}
-%\label{lab07}
-%\paragraph{} 
+\begin{comment}
+\chapter{Adding Style: Bootstrap (CSS+JS)}
+\label{lab07}
+\paragraph{} 
+\end{comment}
 
 
 %%%%%%%%%%%%%%%%%
@@ -1334,9 +1337,11 @@ if __name__ == "__main__":
 %%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%
 
-%\chapter{Data Storage \& Encryption}
-%\label{lab08}
-%\paragraph{} 
+\begin{comment}
+\chapter{Data Storage \& Encryption}
+\label{lab08}
+\paragraph{} 
+\end{comment}
 
 
 %%%%%%%%%%%%%%%%%
@@ -1345,9 +1350,11 @@ if __name__ == "__main__":
 %%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%
 
-%\chapter{Building Data APIs with HTTP/JSON}
-%\label{lab09}
-%\paragraph{} 
+\begin{comment}
+\chapter{Building Data APIs with HTTP/JSON}
+\label{lab09}
+\paragraph{} 
+\end{comment}
 
 
 
